# Data_Organization_GUI

./: .env.example  .gitignore  CLAUDE.md  Data_Organization_GUI.py  additive_registry.json  cd_data_processing_automation_GUI_integration.py  cd_data_processing_v3.py  cd_metadata.db  cd_review_window.py  classifier.py  cloud_browser_window.py  config.py  database.py  import_window.py  main.py  main_window.py  manifest.py  models.py  mongo_db.py  parser.py  plotting.py  pyproject.toml  readme.md  verification_window.py
test_data/: R1_C-PFBT100_S-F8BT_50x50_20CB_v0p005_AN_T160_gval=0p047_500nm.csv  R2_C-PFBT_S-F8BT_50_50_0-008mms_160C_20CB_gval=0-61_500nm.csv  R3_C-PFBT100_R-F8BT_50x50_20CB_v0p01_AN_T160_gval=0p042_493nm.csv  R4_C-PFBT_S-F8BT_50_50_0-02mms_160C_20CB_gval=0-21_483.csv  R5_C-PFBT_S-F8BT_50_50_0-05mms_160C_20CB_gval=0-02_469nm.csv  R6_C-PFBT_S-F8BT_50_50_50mms_160C_20CB_gval=0-09_471nm.csv
